<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Running</string>
   <string name="action_settings">Settings</string>
   <string name="speedView">0 m/s</string>
   <string name="averageSpeedView">Av. Speed: </string>
   <string name="durationView">Duration: </string>
   <string name="sessionDistanceView">Distance</string>
   <string name="averagePaceView">Pace:</string>
   <string name="lastMetersSpeedView">Last interval speed:</string>
   <string name="lastMetersPaceView">Last interval pace:</string>
   <string name="providerName">GPS provider: </string>
   <string name="title_activity_main_activity2">MainActivity2</string>
   <string name="title_section1">Sessions</string>
   <string name="title_section2">Settings</string>
   <string name="title_section3">Info</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_example">Example action</string>
   <string name="sessionName">SessioneProva</string>
   <string name="ok">OK</string>
   <string name="importFailed">Import failed</string>
   <string name="importDialogTitle">Import session</string>
   <string name="importDialogMessage">To import a session just open the .json file with this application</string>
   <string name="cancel">Cancel</string>
   <string name="startButton">START</string>
   <string name="stopButton">STOP</string>
   <string name="pauseButton">PAUSE</string>
   <string name="resumeButton">RESUME</string>
   <string name="endSessionDialogTitle">End session</string>
   <string name="deleteDialogTitle">Delete data</string>
   <string name="endSessionDialogMessage">Do you want to finish this session?</string>
   <string name="deleteDataDialogMessage">Do you want to delete all sessions data?</string>
   <string name="newSessionDialogTitle">New session setup</string>
   <string name="itemOptionsDialogTitle">Item options</string>
   <string name="drawer_open">Option Open</string>
   <string name="drawer_close">Option Close</string>
   <string name="category_parameters">Session parameters</string>
   <string name="category_storage">Storage</string>
   <string name="default_speed">Speed</string>
   <string name="default_speed_title">Speed to maintain</string>
   <string name="default_speed_summary">Speed to mantain during session (m/s)</string>
   <string name="default_last_meters">Update interval</string>
   <string name="default_last_meters_title">Set distance between detections</string>
   <string name="default_last_meters_summary">Intermediate lenght</string>
   <string name="newSession">New session</string>
   <string name="sessionList">Session list</string>
   <string name="done">Done</string>
   <string name="exportSessionsDialogTitle">Export sessions</string>
   <string name="exportSessionsDialogSummary">Do you want to export sessions? Files will be exported in: </string>
   <string name="exported">Exported</string>
   <string name="deleted">Deleted</string>
   <string name="emptyListMessage">No sessions yet</string>
   <string name="gpsFix">GPS available</string>
   <string name="gpsNoFix">GPS not available</string>
   <string name="pref_vib_title">Vibration</string>
   <string name="pref_vib_summary">Vibrate when slower or faster than default speed</string>
   <string name="vibration_active">Vibration active</string>
   <string name="vibration_not_active">Vibration not active</string>

   <string name="graphTimeSpeed">Time(sec) / Speed(m/s)</string>
   <string name="graphDistanceSpeed">Distance(m) / Speed(m/s)</string>
   <string name="graphTimeAltitude">Time(sec) / Altitude(m)</string>
   <string name="graphDistanceAltitude">Distance(m) / Altitude(m)</string>
   <string name="graphTimePace">Time(sec) / Pace(min/km)</string>
   <string name="graphDistancePace">Distance(m) / Pace(min/km)</string>

   <string name="author1">Alessandro Mereu</string>
   <string name="author2">Maurizio Romano</string>
   <string name="author3">Matteo Enrico Serpi</string>
   <string name="developed_by">developed by:</string>

   <string name="title_main_content"></string>
   <string name="title_session_list">Sessions</string>
   <string name="title_settings">Settings</string>
   <string name="title_info">Info</string>

   <string name="iconAttribution">
      <div>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from
         <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
         is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">
            CC BY 3.0</a></div></string>
   <string name="license">
      <div>This application is distributed under <a href="http://www.gnu.org/licenses/" title="GPLv3">GPLv3</a> license</div></string>


   <string-array name="item_list">
     <item>Sessions</item>
     <item>Import</item>
     <item>Export</item>
     <item>Settings</item>
     <item>Info</item>
   </string-array>

   <string-array name="item_options">
   <item>Export</item>
   <item>Delete</item>
   </string-array>


</resources>
