<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".RunSession"
              android:background="@color/White" >


   <Chronometer
       android:id="@+id/chronometer1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:textSize="50sp"
       android:textIsSelectable="false"
       android:layout_alignParentTop="true"
       android:gravity="center"
       android:layout_marginTop="10dp"/>


   <RelativeLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:id="@+id/speedIndicator"
       android:layout_width="wrap_content"
       android:layout_height="33dp"
       android:orientation="horizontal"
       tools:context=".RunSession"
       android:layout_gravity="bottom"
       android:layout_below="@+id/chronometer1"
       android:layout_marginLeft="20dp"
       android:layout_margin="10dp">

      <ProgressBar
          style="?android:attr/progressBarStyleHorizontal"
          android:layout_width="match_parent"
          android:layout_height="5dp"
          android:id="@+id/progressBar2"
          android:layout_centerVertical="true"
          android:layout_centerHorizontal="true"
          android:progress="100"
          android:background="@drawable/rounded_red_plus"
          android:progressDrawable="@drawable/progress_transparent" />

      <ProgressBar
          style="?android:attr/progressBarStyleHorizontal"
          android:layout_width="100dp"
          android:layout_height="5dp"
          android:id="@+id/progressBar1"
          android:layout_gravity="center_horizontal"
          android:indeterminateOnly="false"
          android:progress="100"
          android:indeterminate="false"
          android:layout_centerVertical="true"
          android:layout_centerHorizontal="true"
          android:background="@drawable/rounded_green_plus"
          android:progressDrawable="@drawable/progress_transparent" />

      <SeekBar
          style="?android:attr/progressBarStyleHorizontal"
          android:layout_width="fill_parent"
          android:layout_height="match_parent"
          android:id="@+id/seekBar"
          android:layout_gravity="center_horizontal"
          android:indeterminateOnly="false"
          android:progress="50"
          android:clickable="false"
          android:background="@drawable/transparent"
          android:progressDrawable="@drawable/progress_transparent"
          android:enabled="false"
          android:layout_alignParentBottom="false"
          android:layout_centerInParent="true"
          android:layout_alignWithParentIfMissing="false" />
   </RelativeLayout>


   <TextView
       android:id = "@+id/speedView"
       android:text="@string/speedView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="50sp"
       android:layout_marginBottom="10dp"
       android:layout_below="@+id/speedIndicator"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="10dp" />

   <TextView
       android:id = "@+id/sessionDistanceView"
       android:text="@string/sessionDistanceView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:textSize="30sp"
       android:layout_below="@+id/speedView"
       android:layout_marginBottom="2sp"/>

   <TextView
       android:id="@+id/gpsStatus"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="10dp"
       android:text="@string/gpsFix"
       android:layout_centerHorizontal="true"
       android:layout_above="@+id/buttonsContainer"
       android:layout_margin="10dp"
       />


   <RelativeLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       tools:context=".MainActivity"
       android:id="@+id/valuesContainer"
       android:gravity="bottom"
       android:layout_marginBottom="50dp"
       android:layout_above="@+id/gpsStatus">

      <RelativeLayout
          android:layout_width="180dp"
          android:layout_height="match_parent"
          android:id="@+id/speedsContainer"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_marginBottom="5dp">

         <TextView
             android:id="@+id/averageSpeedLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/averageSpeedView"
             android:layout_marginTop="15dp"
             android:layout_above="@+id/averageSpeedValue"
             android:layout_centerHorizontal="true"
             android:textSize="15sp"/>

         <TextView
             android:id="@+id/averageSpeedValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0 m/s"
             android:layout_margin="1dp"
             android:layout_above="@+id/averageLMspeedLabel"
             android:layout_centerHorizontal="true"
             android:textSize="20sp"/>

         <TextView
             android:id="@+id/averageLMspeedLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lastMetersSpeedView"
             android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true"
             android:layout_above="@+id/averageLMspeedValue"
             android:textSize="15sp"/>

         <TextView
             android:id="@+id/averageLMspeedValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0 m/s"
             android:layout_alignParentBottom="true"
             android:layout_margin="1dp"
             android:layout_centerHorizontal="true"
             android:textSize="20sp"/>

      </RelativeLayout>

      <RelativeLayout
          android:layout_width="180dp"
          android:layout_height="wrap_content"
          android:id="@+id/pacesContainer"
          android:layout_alignParentBottom="true"
          android:layout_alignParentRight="true"
          android:layout_marginBottom="5dp">

         <TextView
             android:id="@+id/averagePaceLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/averagePaceView"
             android:layout_marginTop="15dp"
             android:layout_above="@+id/averagePaceValue"
             android:layout_centerHorizontal="true"
             android:textSize="15sp"/>

         <TextView
             android:id="@+id/averagePaceValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0 min/km"
             android:textSize="20sp"
             android:layout_margin="1dp"
             android:layout_above="@+id/averageLMPaceLabel"
             android:layout_centerHorizontal="true"/>

         <TextView
             android:id="@+id/averageLMPaceLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lastMetersPaceView"
             android:layout_marginTop="15dp"
             android:layout_above="@+id/averageLMPaceValue"
             android:layout_centerHorizontal="true"
             android:textSize="15sp"/>

         <TextView
             android:id="@+id/averageLMPaceValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0 min/km"
             android:textSize="20sp"
             android:layout_margin="1dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"/>

      </RelativeLayout>


   </RelativeLayout>


   <RelativeLayout
       android:id="@+id/buttonsContainer"
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:layout_marginBottom="10dp"
       android:layout_alignParentBottom="true">

      <Button
          android:id="@+id/startButton"
          android:layout_width="120dp"
          android:layout_height="40dp"
          android:text="@string/startButton"
          android:textColor="@color/White"
          android:background="@drawable/rounded_green"
          android:layout_alignParentLeft="true"
          android:layout_alignParentBottom="true"
          android:layout_marginLeft="30dp"
          android:elevation="8dp"/>

      <Button
          android:id="@+id/stopButton"
          android:layout_width="120dp"
          android:layout_height="40dp"
          android:text="@string/stopButton"
          android:textColor="@color/White"
          android:background="@drawable/rounded_red"
          android:layout_alignParentBottom="true"
          android:layout_alignParentRight="true"
          android:layout_marginRight="30dp"
       android:elevation="8dp"/>
   </RelativeLayout>

</RelativeLayout>